plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'java'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

// Final jar name: mctranslator-1.0.0-Fabric-26.2.jar (name-version-loader-mcversion)
tasks.named('jar') {
    archiveClassifier = "Fabric-${project.minecraft_version}"
}

repositories {
    maven { url = "https://maven.fabricmc.net/" }
    mavenCentral()
}

dependencies {
    // 26.x is unobfuscated: no 'mappings' line, Minecraft is declared directly.
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${project.loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
}

java {
    // Compile with a JDK 25 toolchain (MC 26.2 needs Java 25), so the Gradle-running JVM may differ.
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.encoding = "UTF-8"
}

processResources {
    inputs.property "version", project.version
    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}
